--- a/apicius-frontend/src/styles/loginSignup.css
+++ b/apicius-frontend/src/styles/loginSignup.css
@@ -280,3 +280,89 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+/* ___________________Register Form_____________________ */
+
+/* Form Group for Dropdowns */
+.form-group {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.form-group select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    color: #666;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
+.phone-group {
+    display: flex;
+    width: 100%;
+}
+
+.phone-field {
+    display: flex;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    overflow: hidden;
+    position: relative;
+}
+
+/* Style for the select (phone code) field */
+.phone-field .phone-code {
+    width: 20%;
+    border: none;
+    height: 100%;
+    padding: 0 8px;
+    box-sizing: border-box;
+    appearance: none;
+    text-align: right;
+}
+
+/* Style for the input (phone number) field */
+.phone-field .phone-number {
+    width: 80%;
+    border: none;
+    height: 100%;
+    padding: 0 8px;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.phone-field .divider {
+    width: 1px; /* Width of the divider */
+    background-color:  #ccc; /* Color of the divider */
+    height: 80%; /* Adjust height as needed */
+    align-self: center; /* Center the divider vertically */
+    margin: 0 0px; /* Add space on either side if needed */
+}
+
+/* Optional: Add a focus style for the unified field */
+.phone-field:focus-within {
+    border-color: #007bff;
+}
+
+/* Checkbox Labels */
+.checkbox-label {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 0.9rem;
+    color: #555;
+    margin-bottom: 10px;
+}
+
+.checkbox-label input[type="checkbox"] {
+    flex: 0 0 10%; /* Set checkbox to take up 10% of the container */
+    margin: 0; /* Optional: remove default margin */
+}
+
+.checkbox-label span {
+    flex: 1; /* Set descriptive text to take up the remaining space */
+    text-align: left; /* Optional: align text to the left */
+}
+
