--- a/apicius-frontend/src/styles/loginSignup.css
+++ b/apicius-frontend/src/styles/loginSignup.css
@@ -175,7 +175,7 @@
     margin-bottom: 20px;
 }
 
-/* ________________Register Page_________________*/
+/* _______________________Register Page_______________________*/
 .register-page {
     display: flex;
     flex-direction: column;
@@ -281,9 +281,9 @@
     margin-bottom: 20px;
 }
 
-/* ___________________Register Form_____________________ */
+/* _________________________Register Form__________________________ */
 
-/* Form Group for Dropdowns */
+/* ---------------Form Group for Dropdowns------------ */  
 .form-group {
     width: 100%;
     margin-bottom: 20px;
@@ -298,11 +298,27 @@
     font-size: 1rem;
 }
 
+/* -------------dropdowns Group for Dropdowns------------ */  
+.dropdowns-group {
+    margin-bottom: 20px;
+}
+
+.dropdowns-group select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    color: #666;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
+
+/* -----------Phone Form Style-------------- */
 .phone-group {
     display: flex;
     width: 100%;
 }
-
+ /* Phone group field */
 .phone-field {
     display: flex;
     width: 100%;
@@ -313,28 +329,14 @@
 }
 
 .phone-field .phone-code {
-    flex: 1;
-    background-color: #ffffff; /* Add your background color */
-    border: 0px solid #ccc;
-    padding: 8px 10px;
-    width: 100%; /* Adjust width as needed */
-    font-size: 1rem;
-    position: relative;
-    padding-right: 0px; /* Space for the custom arrow */
+    width: 30%;
+    border: none;
+    height: 100%;
+    padding: 0 8px;
+    box-sizing: border-box;
     appearance: none;
-}
-
-.phone-field .phone-code::after {
-    content: '▼'; /* Custom arrow */
-    font-size: 0.8rem;
-    color: #333;
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
+    text-align: right;
     }
-
-
 
 /* Style for the input (phone number) field */
 .phone-field .phone-number {
@@ -358,12 +360,12 @@
     border-color: #007bff;
 }
 
-/* Checkbox Labels */
+/* --------Checkbox Labels----------- */
 .checkbox-label {
     display: flex;
     align-items: center;
     gap: 10px;
-    font-size: 1.1rem;
+    font-size: 1rem;
     color: #747272;
     margin-bottom: 10px;
     font-weight: bold;
@@ -374,102 +376,10 @@
     width: 19px;
     height: 19px;
     color: #666;
-    margin: 0; /* Optional: remove default margin */
+    margin: 0; 
 }
 
 .checkbox-label span {
     flex: 1; /* Set descriptive text to take up the remaining space */
     text-align: left; /* Optional: align text to the left */
 }
-
-/* Flag Dropdown Styling */
-.custom-select {
-    position: relative;
-    width: 100%;
-}
-
-.dropdown-option {
-    padding: 10px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    color: #555; /* Color of text */
-    font-size: 16px;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between; /* Aligns text and dropdown icon */
-    cursor: pointer;
-}
-
-.dropdown-option::after {
-    content: '▼';
-    font-size: 12px;
-    color: #999;
-    margin-left: 8px;
-}
-
-.options-container {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    max-height: 200px;
-    overflow-y: auto;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    z-index: 1;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.countryname-option {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    font-size: 16px;
-    color: #555; /* Country Name color */
-    cursor: pointer;
-}
-
-.countryname-option:hover {
-    background-color: #c6cbcd; 
-}
-
-.flag-icon {
-    width: 20px;
-    height: auto;
-    margin-right: 8px;
-    vertical-align: middle;
-}
-
-/* Style for the language select field */
-.language-field {
-    position: relative;
-    width: 100%;
-}
-
-.language-field select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    color: #555;
-    font-size: 16px;
-    border-radius: 4px;
-    appearance: none;
-    cursor: pointer;
-    box-sizing: border-box;
-    margin-bottom: 20px;
-}
-
-.language-field::after {
-    content: '▼';
-    font-size: 12px;
-    color: #999;
-    position: absolute;
-    right: 10px;
-    top: 22px;
-    transform: translateY(-50%);
-    pointer-events: none;
-}
-
