--- a/apicius-frontend/src/App.css
+++ b/apicius-frontend/src/App.css
@@ -7,21 +7,74 @@
   pointer-events: none;
 }
 
+/* Ensure pages respect header height */
+.main-content {
+  margin-top: 30px; /* Adjust to match the header's height */
+  padding: 40px; /* Optional padding for content */
+}
+
+/* ----__________________________Header styling___________________________--- */
+.header {
+  display: flex;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 10px 20px;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgba(255, 255, 255, 1); /* Color & transparency */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  z-index: 1000;
+}
+
+.header-spacer {
+  height: 80px; /* Match the header's height */
+  width: 100%; /* Full width to align with content */
+}
+
+.header .logo {
+  width: 40px;
+  height: auto;
+  margin-left: 20px;
+  margin-right: 10px; 
+}
+
+.header .title-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.header .app-title {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: #d58f0d;
+  margin: 0;
+}
+
+.header-btn {
+  
+  background-color: #f4a318;
+  color: white;
+  padding: 10px 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1rem;
+  margin-right: 15px;
+}
+
+.header-btn:hover {
+  background-color: #b23f01;
+}
+
+/* __________________To Test / Modify__________________ */
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
