--- a/apicius-frontend/src/styles/loginSignup.css
+++ b/apicius-frontend/src/styles/loginSignup.css
@@ -3,20 +3,19 @@
     display: flex;
     justify-content: space-between;
     gap: 10px;
-    margin-top: 20px;
+    margin-top: 2%;
 }
 
 .social-login-buttons button {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    padding: 3%;
     border: none;
     border-radius: 10px;
     cursor: pointer;
     font-size: 1rem;
-    width: 40%; /* size of buttons in container */
-    max-width: 200px;
+    width: 100%; /* size of buttons in container */
     position: relative;
     font-weight: bold;
 }
@@ -37,7 +36,7 @@
 }
 /* ___Icon spacing___ */
 .social-login-buttons .icon {
-    margin-right: 8px;
+    margin-right: 5%;
     width: 20px;
     height: 20px;
 }
